# ic4-rs

./: Cargo.toml  README.md
ic4/: Cargo.toml  README.md
ic4-sys/: Cargo.toml  README.md  build.rs  wrapper.hpp
ic4-sys/bindings/: bindings.rs
ic4-sys/src/: bindings.rs  lib.rs
ic4-sys/src/bindings/: ic4.rs
ic4-sys/tests/: connect_camera.rs  enumerate_devinfo.rs  tests_sys_general.rs
ic4/src/: buffer.rs  debug.rs  device.rs  display.rs  error.rs  grabber.rs  gui.rs  init.rs  lib.rs  macros.rs  property.rs  propid.rs  queue_sink.rs  sink.rs  snap_sink.rs  traits.rs  version.rs  video_writer.rs
ic4/src/macros/: bind_type.rs
ic4/src/property/: names.rs
ic4/src/sink/: queue_sink.rs  snap_sink.rs
ic4/tests/: enumerate_device.rs  general.rs  tests_general.rs  without_setup.rs
