[workspace]
resolver = "2"
members = ["ic4-sys"]

[workspace.package]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
description = "A Rust bindings for IC Imaging Control 4 SDK from The Imaging Source. (Raw Part)"
homepage = "https://github.com/MiyakoMeow/ic4-rs"
repository = "https://github.com/MiyakoMeow/ic4-rs"
documentation = "https://docs.rs/ic4-sys"
keywords = ["ffi", "camera", "video", "windows"]
categories = ["api-bindings", "external-ffi-bindings", "hardware-support", "multimedia::video", "os::windows-apis"]

[workspace.dependencies]
ic4-sys = { path = "./ic4-sys" }

bindgen = "0.70.1"
once_cell = "1.19.0"
