[workspace]
resolver = "2"
members = ["ic4-sys", "ic4"]

[workspace.package]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MiyakoMeow/ic4-rs"
repository = "https://github.com/MiyakoMeow/ic4-rs"
keywords = ["ffi", "camera", "video", "windows"]
categories = ["api-bindings", "external-ffi-bindings", "hardware-support", "multimedia::video", "os::windows-apis"]

[workspace.dependencies]
ic4-sys = { path = "./ic4-sys", version = "0.2.0-dev" }

bindgen = ">=0.70.1,<1"
once_cell = ">=1.19.0,<2"
