[package]
name = "ic4-sys"
edition.workspace = true
readme.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

version = "0.1.0"
build = "build.rs"

[build-dependencies]
bindgen = { workspace = true, optional = true }
once_cell.workspace = true

[features]
default = []
buildtime-bindgen = ["bindgen"]
