[package]
name = "ic4-sys"
version = "0.1.1"
description = "A Rust bindings for IC Imaging Control 4 SDK from The Imaging Source. (Raw Part from bindgen)"
readme = "./README.md"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

build = "build.rs"

[build-dependencies]
bindgen = { workspace = true, optional = true }
once_cell.workspace = true

[features]
default = []
buildtime-bindgen = ["bindgen"]
