[package]
name = "ic4-sys"
version = "0.2.0-dev"
description = "A Rust bindings for IC Imaging Control 4 SDK from The Imaging Source. (Raw Part from bindgen)"
documentation = "https://docs.rs/ic4-sys"
readme = "README.md"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

build = "build.rs"

[build-dependencies]
bindgen = { workspace = true, optional = true }
once_cell.workspace = true

[features]
default = []
buildtime-bindgen = ["bindgen"]
test-ensure-existing-device = []
