[package]
name = "ic4"
version = "0.0.1"
description = "A Rust bindings for IC Imaging Control 4 SDK from The Imaging Source. (Safe Part)"
readme = "./README.md"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ic4-sys.workspace = true

once_cell.workspace = true

[features]
buildtime-bindgen = ["ic4-sys/bindgen"]
